[package]
name = "network-changed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
netdev = { version = "0.25", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1.0"}
public-ip-address = { version = "0.2" }
base64 = "0.22"
directories = "5.0"
cocoon = "0.4.1"

[profile.dev.package.cocoon]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[dev-dependencies]
colored = "2.1"
chrono = "0.4"
